erDiagram

    users ||--o| caregiver : "has caregiver profile"
    users ||--o| careReceiver : "has care receiver profile"

    careReceiver ||--o{ address : "has"
    careReceiver ||--o{ appointment : "requests"
    careReceiver ||--o{ diagnosis : "has"
    careReceiver ||--o{ insurance : "has"
    careReceiver ||--o{ medication : "has"

    caregiver ||--o{ appointment : "assigned to"
    caregiver ||--o{ caregiverCertification : "has"

    certification ||--o{ caregiverCertification : "is earned as"

    address ||--o{ appointment : "used for"

    appointment ||--o{ message : "has"
    users ||--o{ message : "sends"

    appointment ||--o| payment : "has payment"


    users {
        binary user_id PK
        varchar email UK
        varchar password_hash
        enum role
        tinyint is_active
        timestamp created_at
    }

    caregiver {
        binary caregiver_id PK, FK
        varchar first_name
        varchar last_name
        varchar email UK
        varchar phone
        tinyint is_verified
        decimal rating
        varchar profile_picture_url
        timestamp created_at
    }

    careReceiver {
        binary care_receiver_id PK, FK
        varchar first_name
        varchar last_name
        date birthday
        varchar sex
        varchar profile_picture_url
        timestamp created_at
    }

    address {
        binary address_id PK
        binary care_receiver_id FK
        varchar nickname
        varchar address_line1
        varchar address_line2
        varchar city
        varchar state
        varchar zip_code
        decimal latitude
        decimal longitude
        tinyint is_primary
        timestamp created_at
    }

    appointment {
        binary appointment_id PK
        binary caregiver_id FK
        binary care_receiver_id FK
        binary address_id FK
        timestamp requested_at
        datetime start_time
        datetime end_time
        enum status
        text notes
        varchar cancelled_reason
        datetime cancelled_at
        timestamp created_at
    }

    appointment_audit {
        bigint audit_id PK
        binary appointment_id
        varchar old_status
        varchar new_status
        timestamp changed_at
    }

    certification {
        binary certification_id PK
        varchar certification_name UK
        varchar issuing_authority
        text description
    }

    caregiverCertification {
        binary caregiver_certification_id PK
        binary caregiver_id FK
        binary certification_id FK
        varchar certificate_number
        date issued_date
        date expiration_date
        varchar verification_status
        varchar document_url
        timestamp created_at
    }

    diagnosis {
        binary care_receiver_id PK, FK
        varchar diagnosis PK
        varchar prescriber
        date diagnosis_date
    }

    insurance {
        binary insurance_id PK
        binary care_receiver_id FK
        varchar provider_name
        varchar policy_number
        varchar group_number
        varchar plan_name
        varchar subscriber_name
        varchar relationship_to_subscriber
        date effective_date
        date expiration_date
        varchar phone_number
        tinyint is_primary
        timestamp created_at
    }

    medication {
        binary medication_id PK
        binary care_receiver_id FK
        varchar drug_name
        varchar prescriber
        varchar dose
    }

    message {
        binary message_id PK
        binary appointment_id FK
        binary sender_id FK
        enum sender_role
        text message_text
        timestamp sent_at
        datetime read_at
    }

    payment {
        binary payment_id PK
        binary appointment_id FK, UK
        int amount_cents
        char currency
        varchar status
        timestamp created_at
    }